[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

# Ignore flat-layout.
[tool.setuptools]
py-modules = []

[project]
name = "prompt-eval"
version = "0.1.0"
description = "Evaluate prompts"
readme = "README.md"
requires-python = ">=3.8.0"
authors = [
    {name = "Vikram Singh", email = "vikram.singh.work@proton.me"},
]

dependencies = [
    "fastapi==0.100.1",
    "pydantic==1.10.12",
    "openai==0.28.0",
    "psycopg2-binary==2.9.7",
    "python-dotenv==1.0.0",
    "SQLAlchemy==2.0.21",
    "uvicorn==0.23.2",
    "alembic==1.12.0",
    "loguru==0.7.2"
]

[project.optional-dependencies]
dev = [
    "black==23.7.0",
    "mypy==1.4.1",
    "pytest==7.3.1",
    "flake8==6.0.0",
    "isort==5.12.0",
    "flake8-pyproject==1.2.3"
]

[tool.black]
line-length = 120
include = '\.pyi?$' # All Python files
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
py_version = 38

[tool.flake8]
max-line-length = 120
exclude = '.venv'

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
show_error_codes = true